fix top nav on mobile

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -183,7 +183,7 @@ header{
 					@include mobile{
 						background-color:rgba(97, 152, 142, .8);
 						left:-1000px;
-						top:48px;
+						top:40px;
 					}
 				}
 				li:hover ul.submenu, li:active ul.submenu{
